--- a/Soko02/game.html
+++ b/Soko02/game.html
@@ -9,7 +9,7 @@
     <div id="assets">
         <h1>Assets</h1>
         <img id="imgbrick" src="images/brick.png" />
-        <img id="imgegg" src="images/egg.jpg" />
+        <img id="imggold" src="images/gold.png" />
         <img id="imgface1" src="images/face0.png" />
         <img id="imgface0" src="images/face1.png" />
         <audio controls="controls">
@@ -19,5 +19,6 @@
 
     <script src="game.js"></script>
     <script src="input.js"></script>
+    <script src="map.js"></script>
 </body>
 </html>
