--- a/Soko02/game.html
+++ b/Soko02/game.html
@@ -12,7 +12,7 @@
         <img id="imggold" src="images/gold.png" />
         <img id="imgface1" src="images/face0.png" />
         <img id="imgface0" src="images/face1.png" />
-        <audio controls="controls">
+        <audio id="sndcoins" controls="controls">
             <source src="audio/coins.mp3" />
         </audio>
     </div>
