--- a/Soko02/game.html
+++ b/Soko02/game.html
@@ -5,20 +5,29 @@
     <link href="game.css" rel="stylesheet" />
 </head>
 <body>
-    <canvas id="canvas" width="640" height="480"></canvas>
-    <div id="assets">
-        <h1>Assets</h1>
-        <img id="imgbrick" src="images/brick.png" />
-        <img id="imggold" src="images/gold.png" />
-        <img id="imgface1" src="images/face0.png" />
-        <img id="imgface0" src="images/face1.png" />
-        <audio id="sndcoins" controls="controls">
-            <source src="audio/coins.mp3" />
-        </audio>
+    <div id="container">
+        <canvas id="canvas" width="640" height="480"></canvas>
+        <div id="game_screen">
+            <span>Parabéns, você ganhou!</span>
+        </div>
+
+
+        <div id="assets">
+            <h1>Assets</h1>
+            <img id="imgbrick" src="images/brick.png" />
+            <img id="imggold" src="images/gold.png" />
+            <img id="imgbox" src="images/box.png" />
+            <img id="imgface1" src="images/face0.png" />
+            <img id="imgface0" src="images/face1.png" />
+            <audio id="sndcoins" controls="controls">
+                <source src="audio/coins.mp3" />
+            </audio>
+        </div>
+
+        <script src="game.js"></script>
+        <script src="input.js"></script>
+        <script src="map.js"></script>
     </div>
 
-    <script src="game.js"></script>
-    <script src="input.js"></script>
-    <script src="map.js"></script>
 </body>
 </html>
