--- a/Soko02/game.html
+++ b/Soko02/game.html
@@ -3,6 +3,7 @@
 <head>
     <title>Game</title>
     <link href="game.css" rel="stylesheet" />
+    <meta http-equiv="cache-control" content="nocache" />
 </head>
 <body>
     <div id="container">
@@ -23,10 +24,11 @@
                 <source src="audio/coins.mp3" />
             </audio>
         </div>
-
+         
         <script src="game.js"></script>
         <script src="input.js"></script>
         <script src="map.js"></script>
+        <script src="player.js"></script>
     </div>
 
 </body>
